--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,17 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
-        android:label="Sprite Renderer"
+        android:label="World Forge"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.pixarninja.world_forge.MainActivity">
+        <activity android:name="com.pixarninja.world_forge.MainActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+`
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
